docs/examples/invalid/semanticErr/extension/class/sameNameClass.wacc
{
  class A {
    int[] a;

    void init(int[] x) {
      @a = x
    }
  }

  class A {
    int b;

    void init(int x) {
      @a = x
    }
  }
  skip
}
